[package]
name = "tokio-pg-mapper"
version = "0.1.0"
description = "Proc-macro library used to map a tokio-postgres row to a Rust type (struct)"
authors = ["Darin Gordon <dkcdkg@gmail.com>", "Zeyla Hellyer <zeyla@hellyer.dev>"]
repository = "https://www.github.com/Dowwie/tokio-pg-mapper"
homepage = "https://www.github.com/Dowwie/tokio-pg-mapper"
license = "ISC"
keywords = ["tokio", "postgres", "mapper"]
edition = "2018"

[lib]
doctest = false

[dependencies]
tokio-postgres = "0.5.1"
tokio-pg-mapper-derive = { version = "0.1.0", optional = true}


[features]
derive = ["tokio-pg-mapper-derive"]
