[package]
name = "tokio-pg-mapper"
version = "0.1.6"
description = "Proc-macro library used to map a tokio-postgres row to a Rust type (struct)"
authors = ["Darin Gordon <dkcdkg@gmail.com>", "Zeyla Hellyer <zeyla@hellyer.dev>"]
repository = "https://www.github.com/Dowwie/tokio-postgres-mapper"
homepage = "https://www.github.com/Dowwie/tokio-postgres-mapper"
license = "ISC"
keywords = ["tokio", "postgres", "mapper"]
edition = "2018"

[lib]
doctest = false

[dependencies]
tokio-postgres = "0.5.1"
tokio-pg-mapper-derive = { version = "0.1.4", optional = true}


[features]
derive = ["tokio-pg-mapper-derive"]

[workspace]
members=[
    ".",
    "pg_mapper_derive",
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[patch.crates-io]
tokio-pg-mapper = { path = "." }
tokio-pg-mapper-derive = { path = "pg_mapper_derive" }