[package]
name = "tokio-pg-mapper"
version = "0.1.8"
description = "Proc-macro library used to map a tokio-postgres row to a Rust type (struct)"
authors = ["Darin Gordon <dkcdkg@gmail.com>", "Zeyla Hellyer <zeyla@hellyer.dev>"]
repository = "https://www.github.com/Dowwie/tokio-postgres-mapper"
homepage = "https://www.github.com/Dowwie/tokio-postgres-mapper"
license = "ISC"
keywords = ["tokio", "postgres", "mapper"]
edition = "2018"

[lib]
doctest = false

[dependencies]
tokio-postgres = "0.6"
tokio-pg-mapper-derive = { version = "0.1.5", optional = true }

[[example]]
name = "src"
required-features = ["derive"]

[features]
derive = ["tokio-pg-mapper-derive"]
