[package]
name = "tokio-pg-mapper-derive"
version = "0.1.3"
description = "Proc-macro library used to map a tokio-postgres row to a Rust type (struct)"
authors = ["Darin Gordon <dkcdkg@gmail.com>", "Zeyla Hellyer <zeyla@hellyer.dev>"]
repository = "https://www.github.com/Dowwie/tokio-postgres-mapper"
homepage = "https://www.github.com/Dowwie/tokio-postgres-mapper"
license = "ISC"
keywords = ["tokio", "postgres", "mapper"]
edition = "2018"


[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.13", features = ["full"] }
tokio-postgres = "0.5.1"
